--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "webpack": "^4.43.0"
   },
   "dependencies": {
+    "b64-to-blob": "^1.2.19",
+    "html-to-image": "^1.6.1",
     "normalize.css": "^8.0.1"
   }
 }
